feat: Wip re (#21)
add re event
