# src/main/java/it/gov/pagopa/fdr/rest/organizations/InternalOrganizationsResource.java
@@ -7,7 +7,6 @@ import static it.gov.pagopa.fdr.util.MDCKeys.NDP;
 import static it.gov.pagopa.fdr.util.MDCKeys.PSP_ID;
 
 import it.gov.pagopa.fdr.Config;
-import it.gov.pagopa.fdr.rest.model.GenericResponse;
 import it.gov.pagopa.fdr.rest.organizations.mapper.OrganizationsResourceServiceMapper;
 import it.gov.pagopa.fdr.rest.organizations.response.GetAllInternalResponse;
 import it.gov.pagopa.fdr.rest.organizations.response.GetIdResponse;
@@ -17,14 +16,15 @@ import it.gov.pagopa.fdr.service.dto.ReportingFlowGetDto;
 import it.gov.pagopa.fdr.service.dto.ReportingFlowGetPaymentDto;
 import it.gov.pagopa.fdr.service.dto.ReportingFlowInternalDto;
 import it.gov.pagopa.fdr.service.organizations.InternalOrganizationsService;
+import it.gov.pagopa.fdr.service.re.model.FlowActionEnum;
 import it.gov.pagopa.fdr.util.AppMessageUtil;
+import it.gov.pagopa.fdr.util.Re;
 import jakarta.inject.Inject;
 import jakarta.validation.constraints.Min;
 import jakarta.validation.constraints.Pattern;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.DefaultValue;
 import jakarta.ws.rs.GET;
-import jakarta.ws.rs.PUT;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.PathParam;
 import jakarta.ws.rs.Produces;
@@ -45,11 +45,6 @@ import org.slf4j.MDC;
 @Consumes("application/json")
 @Produces("application/json")
 public class InternalOrganizationsResource {
-
-  private static final String GET_ALL_PUBLISHED_FLOW = "getAllPublishedFlowInternal";
-  private static final String GET_REPORTING_FLOW = "getReportingFlowInternal";
-  private static final String GET_REPORTING_FLOW_PAYMENTS = "getReportingFlowPaymentsInternal";
-  private static final String CHANGE_READ_FLAG = "changeReadFlagInternal";
 
   @Inject Config config;
   @Inject Logger log;
@@ -77,28 +72,29 @@ public class InternalOrganizationsResource {
                     schema = @Schema(implementation = GetAllInternalResponse.class)))
       })
   @GET
+  @Re(flowName = FlowActionEnum.INTERNAL_GET_ALL_FDR)
   public GetAllInternalResponse getAllPublishedFlow(
       @QueryParam("idPsp") @Pattern(regexp = "^\\w{1,35}$") String idPsp,
       @QueryParam("page") @DefaultValue("1") @Min(value = 1) long pageNumber,
       @QueryParam("size") @DefaultValue("50") @Min(value = 1) long pageSize) {
-    MDC.put(ACTION, GET_ALL_PUBLISHED_FLOW);
+    String action = MDC.get(ACTION);
     MDC.put(EC_ID, NDP);
     MDC.put(PSP_ID, idPsp);
 
     log.infof(
         AppMessageUtil.logProcess("%s with idPsp:[%s] - page:[%s], pageSize:[%s]"),
-        GET_ALL_PUBLISHED_FLOW,
+        action,
         idPsp,
         pageNumber,
         pageSize);
 
     ConfigDataV1 configData = config.getClonedCache();
     // validation
-    internalValidator.validateGetAllInternal(GET_ALL_PUBLISHED_FLOW, idPsp, configData);
+    internalValidator.validateGetAllInternal(action, idPsp, configData);
 
     // get from db
     ReportingFlowInternalDto reportingFlowInternalDto =
-        internalService.findByInternals(GET_ALL_PUBLISHED_FLOW, idPsp, pageNumber, pageSize);
+        internalService.findByInternals(action, idPsp, pageNumber, pageSize);
 
     return mapper.toGetAllInternalResponse(reportingFlowInternalDto);
   }
@@ -121,22 +117,23 @@ public class InternalOrganizationsResource {
       })
   @GET
   @Path("/{fdr}/rev/{rev}/psps/{psp}")
+  @Re(flowName = FlowActionEnum.INTERNAL_GET_FDR)
   public GetIdResponse getReportingFlow(
       @PathParam("fdr") String fdr, @PathParam("rev") Long rev, @PathParam("psp") String psp) {
-    MDC.put(ACTION, GET_REPORTING_FLOW);
+    String action = MDC.get(ACTION);
     MDC.put(EC_ID, NDP);
     MDC.put(FLOW_NAME, fdr);
     MDC.put(PSP_ID, psp);
 
-    log.infof(AppMessageUtil.logProcess("%s with id:[%s]"), GET_REPORTING_FLOW, fdr);
+    log.infof(AppMessageUtil.logProcess("%s with id:[%s]"), action, fdr);
 
     ConfigDataV1 configData = config.getClonedCache();
     // validation
-    internalValidator.validateGetInternal(GET_REPORTING_FLOW, fdr, psp, configData);
+    internalValidator.validateGetInternal(action, fdr, psp, configData);
 
     // get from db
     ReportingFlowGetDto flowNameInternals =
-        internalService.findByReportingFlowNameInternals(GET_REPORTING_FLOW, fdr, rev, psp);
+        internalService.findByReportingFlowNameInternals(action, fdr, rev, psp);
 
     return mapper.toGetIdResponse(flowNameInternals);
   }
@@ -159,70 +156,34 @@ public class InternalOrganizationsResource {
       })
   @GET
   @Path("/{fdr}/rev/{rev}/psps/{psp}/payments")
+  @Re(flowName = FlowActionEnum.INTERNAL_GET_FDR_PAYMENT)
   public GetPaymentResponse getReportingFlowPayments(
       @PathParam("fdr") String fdr,
       @PathParam("rev") Long rev,
       @PathParam("psp") String psp,
       @QueryParam("page") @DefaultValue("1") @Min(value = 1) long pageNumber,
       @QueryParam("size") @DefaultValue("50") @Min(value = 1) long pageSize) {
-    MDC.put(ACTION, GET_REPORTING_FLOW_PAYMENTS);
+    String action = MDC.get(ACTION);
     MDC.put(EC_ID, NDP);
     MDC.put(FLOW_NAME, fdr);
     MDC.put(PSP_ID, psp);
 
     log.infof(
         AppMessageUtil.logProcess("%s with id:[%s] - page:[%s], pageSize:[%s]"),
-        GET_REPORTING_FLOW_PAYMENTS,
+        action,
         fdr,
         pageNumber,
         pageSize);
 
     ConfigDataV1 configData = config.getClonedCache();
     // validation
-    internalValidator.validateGetPaymentInternal(GET_REPORTING_FLOW_PAYMENTS, fdr, psp, configData);
+    internalValidator.validateGetPaymentInternal(action, fdr, psp, configData);
 
     // get from db
     ReportingFlowGetPaymentDto flowNameInternals =
         internalService.findPaymentByReportingFlowNameInternals(
-            GET_REPORTING_FLOW_PAYMENTS, fdr, rev, psp, pageNumber, pageSize);
+            action, fdr, rev, psp, pageNumber, pageSize);
 
     return mapper.toGetPaymentResponse(flowNameInternals);
-  }
-
-  @Operation(
-      summary = "Change internal read flag of reporting flow",
-      description = "Change internal read flag of reporting flow")
-  @APIResponses(
-      value = {
-        @APIResponse(ref = "#/components/responses/InternalServerError"),
-        @APIResponse(ref = "#/components/responses/AppException400"),
-        @APIResponse(ref = "#/components/responses/AppException404"),
-        @APIResponse(
-            responseCode = "200",
-            description = "Success",
-            content =
-                @Content(
-                    mediaType = MediaType.APPLICATION_JSON,
-                    schema = @Schema(implementation = GenericResponse.class)))
-      })
-  @PUT
-  @Path("/{fdr}/rev/{rev}/psps/{psp}/read")
-  public GenericResponse changeInternalReadFlag(
-      @PathParam("fdr") String fdr, @PathParam("rev") Long rev, @PathParam("psp") String psp) {
-    MDC.put(ACTION, CHANGE_READ_FLAG);
-    MDC.put(EC_ID, NDP);
-    MDC.put(FLOW_NAME, fdr);
-    MDC.put(PSP_ID, psp);
-
-    log.infof(AppMessageUtil.logProcess("%s with id:[%s]"), CHANGE_READ_FLAG, fdr);
-
-    ConfigDataV1 configData = config.getClonedCache();
-    // validation
-    internalValidator.validateChangeInternalReadFlag(CHANGE_READ_FLAG, fdr, psp, configData);
-
-    // change on DB
-    internalService.changeInternalReadFlag(CHANGE_READ_FLAG, fdr, rev, psp);
-
-    return GenericResponse.builder().message(String.format("Flow [%s] internal read", fdr)).build();
   }
 }
